--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "nile": "./dist/index.js"
   },
   "scripts": {
-    "build": "tsc",
+    "prebuild": "rm -rf dist",
+    "build": "tsc && npm run copy-files",
+    "postbuild": "chmod +x dist/index.js && sudo npm unlink -g nile-cli && sudo npm link",
+    "copy-files": "mkdir -p dist/lib && cp src/lib/callback.html dist/lib/ && cp src/image/logo.jpg dist/lib/",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
     "lint": "eslint . --ext .ts",
