--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -47,17 +47,11 @@ jobs:
       - name: Run tests
         run: yarn test
 
-      - name: Version
-        run: |
-          git config user.name "${{ github.actor }}"
-          git config user.email "${{ github.actor }}@users.noreply.github.com"
-          yarn version --prerelease --preid alpha --message "chore(release): %s [skip ci]"
-
-      - name: Publish to npm
+      - name: Version and Publish
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
-          yarn publish --tag alpha --access public
+          npx semantic-release --preset @semantic-release/npm --branches main --prerelease alpha
 
       - name: Update npm for GitHub Packages
         run: |
