--- a/package.json
+++ b/package.json
@@ -27,6 +27,16 @@
     "type": "git",
     "url": "https://github.com/niledatabase/cli.git"
   },
+  "release": {
+    "branches": ["main"],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      "@semantic-release/git"
+    ]
+  },
   "dependencies": {
     "@niledatabase/react": "^3.0.0-alpha.40",
     "@theniledev/js": "^1.0.0-alpha.194",
