--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -6,8 +6,7 @@ on:
       - main
 
 jobs:
-  if_merged:
-    if: github.event.pull_request.merged
+  release:
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -17,7 +16,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: main
           token: ${{secrets.PAT}}
 
       - name: Enable Corepack before setting up Node
