--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -50,13 +50,14 @@ jobs:
         run: |
           npx semantic-release --branches main --prerelease alpha
 
-      - name: Update npm for GitHub Packages
-        run: |
-          rm -rf .npmrc
-          echo "registry=https://npm.pkg.github.com/" >> .npmrc
-          echo "//npm.pkg.github.com/:_authToken=$NPM_TOKEN" >> .npmrc
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - name: Setup Node for GitHub Packages
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20.x"
+          registry-url: 'https://npm.pkg.github.com'
+          scope: '@niledatabase'
 
       - name: Publish to GitHub Packages
-        run: yarn publish --tag alpha --access public --registry https://npm.pkg.github.com/ 
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.PAT }}
+        run: yarn publish --tag alpha --access public --registry=https://npm.pkg.github.com/ 
