--- a/package.json
+++ b/package.json
@@ -28,12 +28,33 @@
     "url": "https://github.com/niledatabase/cli.git"
   },
   "release": {
-    "branches": ["main"],
+    "branches": [
+      {
+        "name": "main",
+        "prerelease": "alpha"
+      },
+      "stable"
+    ],
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
       "@semantic-release/changelog",
-      "@semantic-release/npm",
+      [
+        "@semantic-release/npm",
+        {
+          "npmPublish": true,
+          "pkgRoot": ".",
+          "registry": "https://registry.npmjs.org/"
+        }
+      ],
+      [
+        "@semantic-release/npm",
+        {
+          "npmPublish": true,
+          "pkgRoot": ".",
+          "registry": "https://npm.pkg.github.com/"
+        }
+      ],
       "@semantic-release/git"
     ]
   },
