--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -45,19 +45,14 @@ jobs:
 
       - name: Version and Publish
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
-          npx semantic-release --branches main --prerelease alpha
-
-      - name: Setup Node for GitHub Packages
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20.x"
-          registry-url: 'https://npm.pkg.github.com'
-          scope: '@niledatabase'
-
-      - name: Publish to GitHub Packages
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.PAT }}
-        run: yarn publish --tag alpha --access public --registry=https://npm.pkg.github.com/ 
+          # Configure both npm and GitHub Package registries
+          echo "registry=https://registry.npmjs.org/" > .npmrc
+          echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> .npmrc
+          echo "@niledatabase:registry=https://npm.pkg.github.com" >> .npmrc
+          echo "//npm.pkg.github.com/:_authToken=$GITHUB_TOKEN" >> .npmrc
+          
+          # Run semantic-release with prerelease configuration
+          npx semantic-release --branches main --prerelease alpha 
