fix: -try alpha

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
       {
         "name": "main",
         "prerelease": "alpha",
-        "channel": "alpha"
+        "channel": "alpha",
+        "range": "1.0.0"
       },
       {
         "name": "stable",
@@ -46,7 +47,15 @@
       }
     ],
     "plugins": [
-      "@semantic-release/commit-analyzer",
+      ["@semantic-release/commit-analyzer", {
+        "preset": "angular",
+        "releaseRules": [
+          {"type": "docs", "release": "patch"},
+          {"type": "fix", "release": "patch"},
+          {"type": "feat", "release": "minor"},
+          {"type": "perf", "release": "patch"}
+        ]
+      }],
       "@semantic-release/release-notes-generator",
       "@semantic-release/changelog",
       [
