--- a/.github/workflows/prerelease.yml
+++ b/.github/workflows/prerelease.yml
@@ -55,4 +55,4 @@ jobs:
           echo "//npm.pkg.github.com/:_authToken=$GITHUB_TOKEN" >> .npmrc
           
           # Run semantic-release with prerelease configuration
-          npx semantic-release --branches main --prerelease alpha 
+          npx semantic-release
