fix: table format, stack trace on debug mode

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/pg": "^8.11.10",
     "axios": "^1.6.0",
     "chalk": "^4.1.2",
+    "cli-table3": "^0.6.5",
     "commander": "^11.0.0",
     "open": "^8.4.2",
     "pg": "^8.13.1"
