--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "cli-table3": "^0.6.5",
     "commander": "^11.0.0",
     "open": "^8.4.2",
+    "ora": "^5.4.1",
     "pg": "^8.13.1"
   },
   "devDependencies": {
