--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "niledatabase",
-  "version": "1.2.0-alpha.5",
+  "version": "1.3.0",
   "description": "Command line interface for Nile databases",
   "main": "dist/index.js",
   "bin": {
